--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <base href="/" />
 
   <meta name="color-scheme" content="light dark" />
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
@@ -17,10 +17,15 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
 </head>
 
 <body>
   <app-root></app-root>
+
+  <!-- <script type="text/javascript" src="assets/responsiveScript/align.js"></script>
+	<script type="text/javascript" src="assets/responsiveScript/alignGrid.js"></script>
+	<script type="text/javascript" src="assets/responsiveScript/UIBlock.js"></script> -->
 </body>
 
 </html>
